2006-09-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* created branches/Matrix-for-R-2.3.x;  on trunk: do
	* DESCRIPTION (Version): 0.9975-0
	(Depends): R (>= 2.4.0)

2006-09-01  Douglas Bates  <bates@R-project.org>

	* R/sparseMatrix.R: Added direct method to CsparseMatrix from graphNEL

2006-09-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R: add coercion from "ANY" to "sparseMatrix"
	* R/denseMatrix.R:  add coercion from "ANY" to "denseMatrix"

	* R/Matrix.R ([): use nargs() to disambiguate M[i] and M[i,]

2006-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (Arith): moved Arith group method one-level up
	from "dsparse" to "sparse" and now go via "Csparse" instead of "dgC"
	* R/dsparseMatrix.R: dito
	* R/Csparse.R: dito

2006-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R (Compare): improve availability of "<", etc
	* R/Auxiliaries.R (asTuniq): new; also make use of R 2.4.x print(*,max)

2006-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgCMatrix.R: aargh: "Arith(<dgC>, numeric)" was wrong because
	of a 0-index which was used as 1-index (..hmm)

	* R/sparseMatrix.R (prSpMatrix): fix printing an all-0 sparse Matrix

	* R/Auxiliaries.R (all0, is0): for 0-testing in presence of NA's
	* R/Auxiliaries.R (isTriMat): use all0() for 0-testing.
	(.is.diagonal): dito

	* R/lgTMatrix.R: as("matrix", "lgTMatrix"): warn about NA's

	* R/Matrix.R (Matrix): also work for NA data

2006-08-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Matrix): + 'forceCheck' argument; dimnames setting
	in all cases.

2006-08-27  Douglas Bates  <bates@R-project.org>

	* src/dense.[ch],init.c, R/ddenseMatrix.R, man/band.Rd
	(ddense_band): Added triu, tril and band for ddenseMatrix objects.

2006-08-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Mutils.c (dup_mMatrix_as_dgeMatrix): added all subclasses of
	subclasses of "ddenseMatrix"