@@ -28,40 +28,3 @@ SEXP ltCMatrix_validate(SEXP x)
 	return ScalarLogical(1);
     }
 }
-
-#if 0				/* no longer used */
-/**
- * Transpose an ltCMatrix
- *
- * @param x Pointer to an ltCMatrix object
- *
- * @return the transpose of x.  It represents the same matrix but is
- * stored in the opposite triangle.
- */
-SEXP ltCMatrix_trans(SEXP x)
-{
-    SEXP Xi = GET_SLOT(x, Matrix_iSym),
-	ans = PROTECT(NEW_OBJECT(MAKE_CLASS("ltCMatrix"))),
-	xdn = GET_SLOT(x, Matrix_DimNamesSym);
-    SEXP adn = ALLOC_SLOT(ans, Matrix_DimNamesSym, VECSXP, 2);
-    int *adims = INTEGER(ALLOC_SLOT(ans, Matrix_DimSym, INTSXP, 2)),
-	*xdims = INTEGER(GET_SLOT(x, Matrix_DimSym)),
-	up = uplo_P(x)[0] == 'U';
-    int m = xdims[0], n = xdims[1], nz = length(Xi);
-    int *xj = expand_cmprPt(n, INTEGER(GET_SLOT(x, Matrix_pSym)),
-			    Calloc(nz, int));
-
-    adims[0] = n; adims[1] = m;
-    SET_VECTOR_ELT(adn, 0, VECTOR_ELT(xdn, 1));
-    SET_VECTOR_ELT(adn, 1, VECTOR_ELT(xdn, 0));
-    SET_SLOT(ans, Matrix_uploSym, mkString(up ? "L" : "U"));
-    SET_SLOT(ans, Matrix_diagSym, duplicate(GET_SLOT(x, Matrix_diagSym)));
-    triplet_to_col(n, m, nz, xj, INTEGER(Xi), (double *) NULL,
-		   INTEGER(ALLOC_SLOT(ans, Matrix_pSym, INTSXP,  m + 1)),
-		   INTEGER(ALLOC_SLOT(ans, Matrix_iSym, INTSXP,  nz)),
-		   (double *) NULL);
-    Free(xj);
-    UNPROTECT(1);
-    return ans;
-}
-#endif
