@@ -1,3 +1,8 @@
+2006-09-04  Douglas Bates  <bates@R-project.org>
+
+	* src/dtCMatrix.c (dtCMatrix_validate): rename functions.
+	* src/DEPS.mkf: update
+
 2006-09-02  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* created branches/Matrix-for-R-2.3.x;  on trunk: do
